--- a/episodes/season_32.yml
+++ b/episodes/season_32.yml
@@ -4,7 +4,7 @@ episodes:
   season: 32
   episode: 1
   description: Mr. Burns goes undercover to see what the employees really think of him.
-  disneyplus_id:
+  disneyplus_id: 4b843d21-679a-4430-bf4c-039d10c31543
   simpsonsworld_id:
   good: maybe
   guest_stars:
@@ -12,7 +12,7 @@ episodes:
   season: 32
   episode: 2
   description: The Simpson family goes to Ancient Rome.
-  disneyplus_id:
+  disneyplus_id: 62c69f41-41d2-46e2-a69a-434217fdd5e3
   simpsonsworld_id:
   good: maybe
   guest_stars:
@@ -20,7 +20,7 @@ episodes:
   season: 32
   episode: 3
   description: Lisa stays home from school to explore the wonders of western art.
-  disneyplus_id:
+  disneyplus_id: 5272f7e8-a4a8-4f47-a894-08849f51e8f4
   simpsonsworld_id:
   good: maybe
   guest_stars:
@@ -28,7 +28,7 @@ episodes:
   season: 32
   episode: 4
   description: The annual Simpsons terror-themed trilogy.
-  disneyplus_id:
+  disneyplus_id: 42262a30-b359-4417-87bc-af4f9ca99a5e
   simpsonsworld_id:
   good: maybe
   guest_stars:
@@ -36,7 +36,7 @@ episodes:
   season: 32
   episode: 5
   description: When Marge and the kids take a seaside vacation, Homer is unwittingly tempted by a femme fatale.
-  disneyplus_id:
+  disneyplus_id: ed49959a-03c6-4e14-8506-5f2b8400bd21
   simpsonsworld_id:
   good: maybe
   guest_stars:
@@ -44,7 +44,7 @@ episodes:
   season: 32
   episode: 6
   description: Grampa is accused of a crime in this return to the Simpsons.
-  disneyplus_id:
+  disneyplus_id: b4c0c3b8-c02e-4069-b96f-2b73eb1b00a1
   simpsonsworld_id:
   good: maybe
   guest_stars:
@@ -52,7 +52,7 @@ episodes:
   season: 32
   episode: 7
   description: Bart becomes a voice over actor. Comic Book Guy is humiliated at Comic-Con.
-  disneyplus_id:
+  disneyplus_id: 068ac0b5-a3ef-4a47-adbe-c576d14ba55f
   simpsonsworld_id:
   good: maybe
   guest_stars:
@@ -60,7 +60,7 @@ episodes:
   season: 32
   episode: 8
   description: Principal Skinner and Superintendent Chalmers take a road trip.
-  disneyplus_id:
+  disneyplus_id: 119c3f83-0141-4ba4-9041-39280a5ab7d7
   simpsonsworld_id:
   good: maybe
   guest_stars:
@@ -68,7 +68,7 @@ episodes:
   season: 32
   episode: 9
   description: Lisa calls her teacher a hack and refuses to apologize.
-  disneyplus_id:
+  disneyplus_id: f975f650-7700-4935-b396-621a6bb8e3ca
   simpsonsworld_id:
   good: maybe
   guest_stars:
@@ -76,7 +76,7 @@ episodes:
   season: 32
   episode: 10
   description: A Christmas movie comes to Springfield.
-  disneyplus_id:
+  disneyplus_id: ea02692e-8b29-4d56-992f-426bfc6b5d3a
   simpsonsworld_id:
   good: maybe
   guest_stars:
@@ -84,7 +84,7 @@ episodes:
   season: 32
   episode: 11
   description: Comic book guy and his wife Kumiko debate having a baby.
-  disneyplus_id:
+  disneyplus_id: 76c886a1-1c77-434a-9559-f1bc84cba049
   simpsonsworld_id:
   good: maybe
   guest_stars:
@@ -92,7 +92,7 @@ episodes:
   season: 32
   episode: 12
   description: Bart finds his old teacher’s diary and learns a surprising secret.
-  disneyplus_id:
+  disneyplus_id: ddba70c9-8a76-42c4-b49d-514fd2dbec8d
   simpsonsworld_id:
   good: maybe
   guest_stars:
@@ -100,7 +100,7 @@ episodes:
   season: 32
   episode: 13
   description: Bart becomes a successful caddy.
-  disneyplus_id:
+  disneyplus_id: 18b45aa7-7537-44fe-aa3e-6efe67f12150
   simpsonsworld_id:
   good: maybe
   guest_stars:
@@ -108,7 +108,7 @@ episodes:
   season: 32
   episode: 14
   description: Cletus becomes a singing sensation.
-  disneyplus_id:
+  disneyplus_id: 47aea404-484a-4f83-abd4-18a24da8c558
   simpsonsworld_id:
   good: maybe
   guest_stars:
@@ -116,7 +116,7 @@ episodes:
   season: 32
   episode: 15
   description: Homer tries to get his favorite band to reunite.
-  disneyplus_id:
+  disneyplus_id: cd17413f-6dfe-4d2b-a92c-c859d3ed16a8
   simpsonsworld_id:
   good: maybe
   guest_stars:
@@ -124,7 +124,7 @@ episodes:
   season: 32
   episode: 16
   description: We learn a secret of Flanders’ past.
-  disneyplus_id:
+  disneyplus_id: ad667e50-7fb6-4b0c-89a0-181834df92c4
   simpsonsworld_id:
   good: maybe
   guest_stars:
@@ -132,7 +132,7 @@ episodes:
   season: 32
   episode: 17
   description: We learn that Chief Wiggum’s wife is more than she seems.
-  disneyplus_id:
+  disneyplus_id: b90eca2d-285e-4d52-996f-d57d65c2a1d3
   simpsonsworld_id:
   good: maybe
   guest_stars:
@@ -140,7 +140,7 @@ episodes:
   season: 32
   episode: 18
   description: Mr. Burns gets into the plant-based burger business.
-  disneyplus_id:
+  disneyplus_id: b7bdfed4-8fef-4225-80b1-02e490f43947
   simpsonsworld_id:
   good: maybe
   guest_stars:
@@ -148,7 +148,7 @@ episodes:
   season: 32
   episode: 19
   description: Lisa gets an imaginary friend who makes her feel much better about herself.
-  disneyplus_id:
+  disneyplus_id: 852d8315-80ba-414e-b67b-e80a5476e053
   simpsonsworld_id:
   good: maybe
   guest_stars:
@@ -156,7 +156,7 @@ episodes:
   season: 32
   episode: 20
   description: Lisa makes a shocking college decision, wounding Marge. It leads to a very surprising place.
-  disneyplus_id:
+  disneyplus_id: b49da137-f3d0-4d84-bd7f-4a6d304812c6
   simpsonsworld_id:
   good: maybe
   guest_stars:
@@ -164,7 +164,7 @@ episodes:
   season: 32
   episode: 21
   description: A British secret agent comes to Springfield in search of a Russian spy.
-  disneyplus_id:
+  disneyplus_id: ced76366-e9b2-4ad5-9783-e0fdb25975b6
   simpsonsworld_id:
   good: maybe
   guest_stars:
@@ -172,7 +172,7 @@ episodes:
   season: 32
   episode: 22
   description: Moe breaks a sacred bartender rule.
-  disneyplus_id:
+  disneyplus_id: 8425cef2-91ae-4d92-ba05-174dd5aa2fa8
   simpsonsworld_id:
   good: maybe
   guest_stars:
